fix overflow style

--- a/src/app/show-results/show-results.component.scss
+++ b/src/app/show-results/show-results.component.scss
@@ -1,8 +1,3 @@
-/*@font-face {
-  font-family: "Roboto";
-  src: url("./fonts/Roboto-Light.ttf");
-}
-*/
 .res-circle {
 
   width: 42px;
@@ -40,10 +35,6 @@ mat-expansion-panel-header{
 
 mat-list-item{
   padding: 2%;
-}
-
-#solution {
-  width: 100%;
 }
 
 .solution-info {
